--- a/app/src/pug/index.pug
+++ b/app/src/pug/index.pug
@@ -27,9 +27,10 @@ html(lang="ja")
           .FV-stones
             img(src=path+"/img/page/cta_container.png", alt="")
             .btn-line.FV-adj-btn
-              .btn-line-img
-                img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-              span.btn-line-txt LINEで無料相談
+              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+                .btn-line-img
+                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
+                span.btn-line-txt LINEで無料相談
           .FV-main 
             img(src=path+"/img/page/fv-main.png", alt="開発エンジニアへの最短ルートならIT道場")
           
@@ -41,9 +42,10 @@ html(lang="ja")
           .FV-stones-sp
             img(src=path+"/img/page/cta_container_sp.png", alt="")
             .btn-line.FV-adj-btn
-              .btn-line-img
-                img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-              span.btn-line-txt LINEで無料相談
+              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+                .btn-line-img
+                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
+                span.btn-line-txt LINEで無料相談
           .FV-main-sp
             img(src=path+"/img/page/fv-main.png", alt="開発エンジニアへの最短ルートならIT道場")
       section.message 
@@ -88,7 +90,7 @@ html(lang="ja")
               .worries-content-item-img 
                 img(src=path+"/img/page/worries_img_03.png", alt="")
               p.worries-content-item-txt 高額な受講料は<br class="sp-only">払えない
-      section.strengths
+      section.strengths#anc-01
         .section-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__dark-brown Strengths
@@ -101,7 +103,7 @@ html(lang="ja")
                 h3.strengths-content-item-txt-head
                   span.txt-yellow 技術力、現場力
                   | を身につける<br>実践的なカリキュラム
-                p.strengths-content-item-txt-text ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                p.strengths-content-item-txt-text IT道場で学ぶ言語は一番企業が求めている求人数が多いJavaを中心に行っていきます。その他にもSQLやHTMLも実施します。<br>課題のレビューが週に2回あり、そこで進捗の確認を行います。
             .strengths-content-item.strengths-content-item--column-reverse
               .strengths-content-item-img
                 img(src=path+"/img/page/strengths_img_02.png", alt="")
@@ -110,7 +112,7 @@ html(lang="ja")
                   span.txt-yellow 東証スタンダード上場
                   | の<br>IT系企業の
                   span.txt-yellow 充実したサポート体制
-                p.strengths-content-item-txt-text ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                p.strengths-content-item-txt-text 職業訓練校で4000名以上を育ててきた実績から技術力、現場力を育てるカリキュラムを用意してあります。<br>さらにISA制度を設けているので入校時の生徒の負担が少なく安心して受講できるように環境を整えています。
             .strengths-content-item
               .strengths-content-item-img
                 img(src=path+"/img/page/strengths_img_03.png", alt="")
@@ -118,7 +120,8 @@ html(lang="ja")
                 h3.strengths-content-item-txt-head
                   span.txt-yellow 後払いもできる！
                   | <br>負担が少ない受講料
-                p.strengths-content-item-txt-text ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                p.strengths-content-item-txt-text 就職後に最初のお給料から毎月1,2万円を選択していただきスクール料金のお支払いしていただくシステムになります。<br>入学時に資金がなくてもお気軽に通うことができますので是非ご活用ください！<br>でもISA支払いだと運営成り立つの？と疑問が生まれると思います。ですが職業訓練校で4000名のうち7割（3000名、グループ会社200名）以上の人たちを就職させた実績があるのと、IT道場のカリキュラムはエスワイシステムの研修と同じでありまして、その研修を受けたほとんどの方が現場が決まり、仕事をしていく力が身についているからです。なので就職に関しては絶対的な自信があります！
+
       section.cta
         .section-wrapper.cta-wrapper
           .cta-area 
@@ -129,14 +132,15 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_01.png", alt="STEP1 ボタンをタップ 画面下の予約ボタンをタップ")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_02.png", alt="STEP2 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_02.png", alt="STEP2 認証許可＆友達追加 認証許可して登録しよう")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_03.png", alt="STEP3 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              .btn-line-img
-                img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-              span.btn-line-txt LINEで無料相談
-      section.voice
+              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+                .btn-line-img
+                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
+                span.btn-line-txt LINEで無料相談
+      section.voice#anc-02
         .section-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__light-brown Voice
@@ -148,58 +152,109 @@ html(lang="ja")
             .swiper-wrapper 
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Bさん
+                  span.voice-item-name 20代男性 K・Iさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/man1.png", alt="")
+                  h3.voice-item-head 元金融営業
+                  p.voice-item-txt 全くの未経験でのカリキュラムでしたが、実施前と実施後では全く違う考え方になれました。
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Aさん
+                  span.voice-item-name 20代女性 Y・Oさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/woman1.png", alt="")
+                  h3.voice-item-head 新卒文系生活科学部
+                  p.voice-item-txt 作成物のWEBアプリケーションに躓いたがいつでも相談できる環境が整っていて解決しました。
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Aさん
+                  span.voice-item-name 20代男性 P・Aさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/man2.png", alt="")
+                  h3.voice-item-head 新卒理系ゲーム制作学部
+                  p.voice-item-txt 講師の方がとても話しやすく、わからない部分はいつでも気軽に質問ができる環境でした。
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Aさん
+                  span.voice-item-name 30代女性 H・Nさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/woman2.png", alt="")
+                  h3.voice-item-head 元営業
+                  p.voice-item-txt 未経験の自分でも講師の方にヒントをもらいながら挫折することなくウェブアプリケーションを作成できました。
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Aさん
+                  span.voice-item-name 20代未設定 K・Kさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/man3.png", alt="")
+                  h3.voice-item-head 元塾講師
+                  p.voice-item-txt 社会人として有利になるスキルを学べたり、エンジニアとして生きていく最初の一歩のカリキュラムだと思いました。
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 20代女性Aさん
+                  span.voice-item-name 20代男性 F・Mさん
                   .voice-item-img 
-                    img(src=path+"/img/page/strengths_img_01.png", alt="")
-                  h3.voice-item-head 
-                    | ここが見出し
-                    span.txt-red 15文字程度
-                  p.voice-item-txt ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+                    img(src=path+"/img/page/voice/man4.png", alt="")
+                  h3.voice-item-head 新卒理系理工学部
+                  p.voice-item-txt 自らネットで検索する力を教えてくれたおかげで社会人で必要な自走する能力が身に付きました。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代男性 R・Sさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man5.png", alt="")
+                  h3.voice-item-head 元家具職人
+                  p.voice-item-txt 実際に動くものを作成する事で自分の経験や自信に繋がりました。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 30代男性 E・Gさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man6.png", alt="")
+                  h3.voice-item-head 元翻訳師
+                  p.voice-item-txt システムの様々な要点を学び最終的には開発現場で即戦力となる技術が身に付きました。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 30代男性 Y・Aさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man7.png", alt="")
+                  h3.voice-item-head 元自動車製造
+                  p.voice-item-txt 社会に出た時を想定し工夫した調べ方を教えてくれて問題解決能力が身に付きとても感謝しています。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代男性 K・Nさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man9.png", alt="")
+                  h3.voice-item-head 元ビルメンテナンス業
+                  p.voice-item-txt 未経験の僕でも2か月でシステムを構築する事ができました！
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代男性 K・Oさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man8.png", alt="")
+                  h3.voice-item-head 新卒理系情報学部
+                  p.voice-item-txt カリキュラムで論理的思考力が身に付き現場に入ってJAVA以外の言語でも取り組んでいけるようになりました！
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代男性 Y・Sさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/man10.png", alt="")
+                  h3.voice-item-head 新卒文系経済学部
+                  p.voice-item-txt カリキュラムで論理的思考力が身に付き現場に入ってJAVA以外の言語でも取り組んでいけるようになりました！
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 30代男性 R・Kさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/woman3.png", alt="")
+                  h3.voice-item-head 元ダンサー
+                  p.voice-item-txt 自分で考える事に苦しんでいた時に、考え方の助言を頂く事で解決し成長する事ができました。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代女性 Y・Mさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/woman4.png", alt="")
+                  h3.voice-item-head 元製造業
+                  p.voice-item-txt このカリキュラムで要点を人に説明する能力が向上しコミュニケーションの対応力が身についた。
+              .swiper-slide 
+                .voice-item
+                  span.voice-item-name 20代女性 S・Iさん
+                  .voice-item-img 
+                    img(src=path+"/img/page/voice/woman5.png", alt="")
+                  h3.voice-item-head 新卒文系比較文化学部
+                  p.voice-item-txt すぐにサポートしてくれる方がいるという環境があるので、問題が起きた時の原因と解決方法の調べ方を学ぶことができました。
           .swiper-btn 
             .swiper-button-next
             .swiper-button-prev
@@ -214,14 +269,15 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_01.png", alt="STEP1 ボタンをタップ 画面下の予約ボタンをタップ")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_02.png", alt="STEP2 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_02.png", alt="STEP2 認証許可＆友達追加 認証許可して登録しよう")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_03.png", alt="STEP3 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              .btn-line-img
-                img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-              span.btn-line-txt LINEで無料相談
-      section.course
+              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+                .btn-line-img
+                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
+                span.btn-line-txt LINEで無料相談
+      section.course#anc-03
         .section-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__dark-brown Course
@@ -276,7 +332,7 @@ html(lang="ja")
                       li.tbl-list-item 入校時に企業等と雇用契約を締結しているか方
                       li.tbl-list-item 2024年10月1日までに入校した方
                       li.tbl-list-item 第三者（経済産業省）に情報提供をしてもいい方
-      section.plan
+      section.plan#anc-04
         .plan-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__brown Plan
@@ -368,19 +424,20 @@ html(lang="ja")
                 .cta-content-item
                   img(src=path+"/img/page/cta_01.png", alt="STEP1 ボタンをタップ 画面下の予約ボタンをタップ")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_02.png", alt="STEP2 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_02.png", alt="STEP2 認証許可＆友達追加 認証許可して登録しよう")
                 .cta-content-item
-                  img(src=path+"/img/page/cta_03.png", alt="STEP3 ボタンをタップ 画面下の予約ボタンをタップ")
+                  img(src=path+"/img/page/cta_03.png", alt="STEP3 画面に従って予約 案内に従ってバナーをタップ！ 希望の日時で予約")
             .btn-line.FV-adj-btn
-              .btn-line-img
-                img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
-              span.btn-line-txt LINEで無料相談
+              a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ") 
+                .btn-line-img
+                  img(src=path+"/img/page/cta-txt.png", alt="エンジニアへの最短ルート")
+                span.btn-line-txt LINEで無料相談
       section.works
         .section-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__dark-brown Works
             h2.section-ttl-middle.section-ttl-middle__white 主な就職先
-      section.faq
+      section.faq#anc-05
         .section-wrapper 
           .section-ttl 
             span.section-ttl-large.section-ttl-large__brown FAQ
