先方確認前修正

--- a/app/src/pug/include/_header.pug
+++ b/app/src/pug/include/_header.pug
@@ -5,15 +5,15 @@ header.header#header
         img(src=path+"/img/logo/logo.png", alt="IT道場 開発エンジニアスクール")
     .header__list
       .header__list__item
-        a(href=path+"#anc-01").text-bold IT道場の強み
+        a(href=path+"#anc-01").text-bold.menuLink01 IT道場の強み
       .header__list__item
-        a(href=path+"#anc-02").text-bold 受講生の口コミ
+        a(href=path+"#anc-02").text-bold.menuLink02 受講生の口コミ
       .header__list__item
-        a(href=path+"#anc-03").text-bold コース概要
+        a(href=path+"#anc-03").text-bold.menuLink03 コース概要
       .header__list__item
-        a(href=path+"#anc-04").text-bold 受講費用制度
+        a(href=path+"#anc-04").text-bold.menuLink04 受講費用制度
       .header__list__item
-        a(href=path+"#anc-05").text-bold よくある質問
+        a(href=path+"#anc-05").text-bold.menuLink05 よくある質問
     .header__img-line.pc-only
       a(href="https://liff.line.me/2000447309-jgk2vKnZ/landing?follow=%40242mridi&lp=Dcgqh9&liff_id=2000447309-jgk2vKnZ")
         img(src=path+"/img/page/comment.png", alt="")
