--- a/app/src/pug/index.pug
+++ b/app/src/pug/index.pug
@@ -236,7 +236,7 @@ html(lang="ja")
                   p.voice-item-txt カリキュラムで論理的思考力が身に付き現場に入ってJAVA以外の言語でも取り組んでいけるようになりました！
               .swiper-slide 
                 .voice-item
-                  span.voice-item-name 30代男性 R・Kさん
+                  span.voice-item-name 30代女性 R・Kさん
                   .voice-item-img 
                     img(src=path+"/img/page/voice/woman3.png", alt="")
                   h3.voice-item-head 元ダンサー
