--- a/app/src/pug/include/_head.pug
+++ b/app/src/pug/include/_head.pug
@@ -28,5 +28,11 @@ link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.
 link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
 link(rel="stylesheet" href="https://use.typekit.net/bzf2hbl.css")
 link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css")
+script.
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P5TTH7XG');
 script(src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js")
 script(src="https://code.jquery.com/jquery-3.3.1.min.js")
